--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="experiments-grid">
             <div class="experiment-card" onclick="window.location.href='ABX_rising_low.html'">
                 <div class="experiment-icon">📈</div>
-                <h3>低升调辨别</h3>
+                <h3>动态音高辨别-低升调</h3>
                 <span class="badge rising">Rising Tone</span>
                 <p>测试对低音区升调变化的敏感度。通过调节调制窗口时长，评估您对缓慢音高上升的辨别能力。</p>
                 <a href="ABX_rising_low.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
@@ -250,7 +250,7 @@
 
             <div class="experiment-card" onclick="window.location.href='ABX_rising_high.html'">
                 <div class="experiment-icon">📊</div>
-                <h3>高升调辨别</h3>
+                <h3>动态音高辨别-高升调</h3>
                 <span class="badge rising">Rising Tone</span>
                 <p>测试对高音区升调变化的敏感度。评估您在高频范围内对音高上升的感知精度。</p>
                 <a href="ABX_rising_high.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
@@ -258,7 +258,7 @@
 
             <div class="experiment-card" onclick="window.location.href='ABX_falling_low.html'">
                 <div class="experiment-icon">📉</div>
-                <h3>低降调辨别</h3>
+                <h3>动态音高辨别-低降调</h3>
                 <span class="badge falling">Falling Tone</span>
                 <p>测试对低音区降调变化的敏感度。通过调节调制窗口时长，评估您对音高下降的辨别能力。</p>
                 <a href="ABX_falling_low.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
@@ -266,26 +266,26 @@
 
             <div class="experiment-card" onclick="window.location.href='ABX_falling_high.html'">
                 <div class="experiment-icon">📋</div>
-                <h3>高降调辨别</h3>
+                <h3>动态音高辨别-高降调</h3>
                 <span class="badge falling">Falling Tone</span>
-                <p>测试对高音区降调变化的敏感度。评估您在高频范围内对音高下降的感知精度。</p>
+                <p>测试对低音区平调变化的敏感度。评估您在高频范围内对音高下降的感知精度。</p>
                 <a href="ABX_falling_high.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
             </div>
 
-            <div class="experiment-card" onclick="window.location.href='ABX_rising_mid.html'">
+            <div class="experiment-card" onclick="window.location.href='ABX_level_high.html'">
                 <div class="experiment-icon">📶</div>
-                <h3>中升调辨别</h3>
+                <h3>静态音高辨别-高调域</h3>
                 <span class="badge rising">Rising Tone</span>
-                <p>测试对中音区升调变化的敏感度。评估您在中频范围内对音高上升的辨别能力。</p>
-                <a href="ABX_rising_mid.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
+                <p>测试对高音区平调变化的敏感度。评估您在高频范围内对音高的辨别能力。</p>
+                <a href="ABX_level_high.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
             </div>
 
-            <div class="experiment-card" onclick="window.location.href='ABX_falling_mid.html'">
+            <div class="experiment-card" onclick="window.location.href='ABX_level_low.html'">
                 <div class="experiment-icon">📐</div>
-                <h3>中降调辨别</h3>
+                <h3>静态音高辨别-低调域</h3>
                 <span class="badge falling">Falling Tone</span>
-                <p>测试对中音区降调变化的敏感度。评估您在中频范围内对音高下降的辨别能力。</p>
-                <a href="ABX_falling_mid.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
+                <p>测试对低音区平调变化的敏感度。评估您在低频范围内对音高的辨别能力。</p>
+                <a href="ABX_level_low.html" class="btn" onclick="event.stopPropagation()">开始实验</a>
             </div>
         </div>
 
