--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>🎵 PLOYU-Peng's Lab</h1>
+        <h1>🎵 POlYU-Peng's Lab</h1>
         <p>音高敏感度訓練系統 - Pitch Sensitivity Training System</p>
     </div>
 
