delete“系统”in title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POLYU-Peng's Lab: 音高敏感度訓練系統</title>
+    <title>POLYU-Peng's Lab: 音高敏感度訓練</title>
     <style>
         * {
             margin: 0;
