--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <div class="container">
     <div class="header">
         <h1>🎵 POlYU-Peng's Lab</h1>
-        <p>音高敏感度訓練系統 - Pitch Sensitivity Training System</p>
+        <p>音高敏感度訓練 - Pitch Sensitivity Training System</p>
     </div>
 
     <div class="content">
