--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PolyU-Peng's Lab: 音高敏感度訓練</title>
+    <title>Poly-Peng's Lab: 音高敏感度訓練</title>
     <style>
         * {
             margin: 0;
@@ -292,7 +292,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>🎵 POLYU-Peng's Lab</h1>
+        <h1>🎵 Poly-Peng's Lab</h1>
         <p>音高敏感度訓練 - Pitch Sensitivity Training System</p>
     </div>
 
