# 1.ployu to POLYU 2.change the names of email title and csv 3.record the start time of experiments

--- a/2AFC/2AFC_rising_high.html
+++ b/2AFC/2AFC_rising_high.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PLOYU-Peng's Lab: Temporal Resolution Training</title>
+    <title>POLYU-Peng's Lab: Temporal Resolution Training</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -1282,7 +1282,7 @@ function printResults() {
         <div class="result-container">
             <div class="header">
                 <h1>Temporal Resolution Test Results</h1>
-                <p>PLOYU-Peng's Lab: Adaptive Staircase Procedure</p>
+                <p>POLYU-Peng's Lab: Adaptive Staircase Procedure</p>
                 <p>${new Date().toLocaleString()}</p>
             </div>
             
