--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2024 PLOYU-Peng's Lab | Pitch Sensitivity Training System</p>
+        <p>&copy; 2024 POLYU-Peng's Lab | Pitch Sensitivity Training System</p>
         <p style="margin-top: 5px; font-size: 12px;">Powered by Adaptive Threshold Experiment Technology</p>
     </div>
 </div>
