--- a/2AFC/2AFC_level_high.html
+++ b/2AFC/2AFC_level_high.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PLOYU-Peng's Lab: Pitch Sensitivity Training</title>
+    <title>POLYU-Peng's Lab: Pitch Sensitivity Training</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
